# grounded

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/eval/: cases.jsonl
backend/sample_corpus/: caffeine.md  exercise.md  sleep_memory.md
backend/src/grounded/: __init__.py  answer.py  chunker.py  cli.py  config.py  embedder.py  eval_harness.py  generator.py  ingest.py  judge.py  llm_client.py  loaders.py  retrieve.py  store.py  verify.py
backend/tests/: test_eval.py  test_generation.py  test_judge.py  test_ollama.py  test_pipeline.py
docs/: roadmap.md
docs/adr/: 0001-record-architecture-decisions.md  0002-grounding-first-verification-mandatory.md  0003-pluggable-offline-first-embedder.md  0004-sqlite-brute-force-retrieval.md  0005-frozen-chunk-text-as-substrate.md  0006-two-leg-verification.md  0007-flag-dont-drop.md  0008-optional-pluggable-generation.md  0009-local-inference-via-ollama.md  0010-llm-judge-grounding-tiers.md  0011-category-based-evaluation-set.md  README.md
docs/specs/: index.md  product.md
docs/specs/system/: data-model.md  grounding.md  pipeline.md  retrieval.md
