[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grounded"
version = "0.1.0"
description = "A document Q&A tool that cannot fabricate a citation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
grounded = "grounded.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
